# Editor-wx

./: .gitignore  AUTHORS  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  configure.ac  easyrpg.cbp  easyrpg.cpp  easyrpg.exe.Manifest  easyrpg.layout  svn-commit.tmp
branches/lobomon-branch/SDK/: Makefile  Map0001.lmu  Map0002.lmu  Proyecto1.dev  Proyecto1.layout  RPG_RT.ini  RPG_RT.ldb  RPG_RT.lmt  Save01.lsd  Save02.lsd  main.cpp  sueSDK.txt
branches/lobomon-branch/SDK/SDK/: CBer.cpp  CBer.h  CBerStream.cpp  CBerStream.h  CRpgArray.cpp  CRpgIOBase.cpp  CRpgIOBase.h  CRpgLdb.cpp  CRpgLdb.h  CRpgLmt.cpp  CRpgLmt.h  CRpgLmu.cpp  CRpgLmu.h  CRpgLsd.cpp  CRpgLsd.h  CRpgUtil.cpp  CRpgUtil.h  index.h
branches/lobomon-branch/SDK/SDK/sueLib/: CBasicStream.cpp  CBasicStream.h  CDimension.h  CMapTable.h  CZLib.cpp  CZLib.h  smart_array.h  sueLib_Compile.h
branches/lobomon-branch/editor/: configure
branches/lobomon-branch/editor/src/: Makefile.am
branches/lobomon-branch/player/: Batle_scene.cpp  Enemy.cpp  Enemy.h  Equip_Menu_scene.cpp  GameOver_scene.cpp  Main_Menu_scene.cpp  Map0001.lmu  Map_scene.cpp  Objects_Menu_scene.cpp  Player.cpp  Player.h  SDL.h  SDL_image.h  Save_Load_Menu_scene.cpp  Skills_Menu_scene.cpp  Stats_Menu_scene.cpp  Title_scene.cpp  actor.cpp  actor.h  audio.cpp  audio.h  batalla.cpp  battle_scene.cpp  chipset.cpp  chipset.h  deltatime.cpp  deltatime.h  enemy.cpp  enemy.h  equip_menu_scene.cpp  font.cpp  font.h  gameover_scene.cpp  item.cpp  item.h  item_use_scene.cpp  key.cpp  key.h  main.cpp  main_menu_scene.cpp  (+21 more)
branches/lobomon-branch/player-linux/src/: Batle_scene.cpp  Enemy.cpp  Enemy.h  Equip_Menu_scene.cpp  GameOver_scene.cpp  Item_use_scene.cpp  Main_Menu_scene.cpp  Map_scene.cpp  Objects_Menu_scene.cpp  Player.cpp  Save_Load_Menu_scene.cpp  Skills_Menu_scene.cpp  Stats_Menu_scene.cpp  Title_scene.cpp  audio.cpp  audio.h  chipset.h  compilar.sh  easyrpg  item.cpp  item.h  main.cpp  scene.cpp  scene.h  skill.cpp  skill.h  sprite.cpp  sprite.h
branches/lobomon-branch/player/Music/: 2003ruinssearch.mid
branches/lobomon-branch/player/Win32/: EasyRpg.dev  EasyRpg.layout  EasyRpg_private.h  EasyRpg_private.rc  EasyRpg_private.res  Makefile.win  Map0001.lmu  SDL_TTF.h  SDL_ttf.lib
branches/lobomon-branch/playercodeblock/Workspace/: Map0001.lmu
branches/lobomon-branch/playercodeblocks/Workspace/: My_workspace.workspace
branches/lobomon-branch/playercodeblocks/Workspace/Player_easyrpg/: Player_easyrpg.cbp  Player_easyrpg.depend  Player_easyrpg.layout  main.cpp
branches/lobomon-branch/playercodeblocks/Workspace/Player_easyrpg/code/atributes/: CActor.cpp  CActor.h  Enemy.cpp  Player.cpp  Player.h  item.cpp  item.h  skill.cpp  skill.h
branches/lobomon-branch/playercodeblocks/Workspace/Player_easyrpg/code/control/: Batle_scene.cpp  Battle_Scene.h  GameOver_scene.cpp  Map_scene.cpp  Title_scene.cpp  scene.h  (+1 more)
branches/newplayer/: audio.cpp  audio.h  chipset.cpp  font.cpp  sprite.cpp
branches/newplayer/control/: joy.cpp  joy.h  joy_test  joytest.cpp
branches/oldplayer-lobomon/: actor.cpp  audio.cpp  battle_scene.cpp  chipset.cpp  chipset.h  deltatime.cpp  deltatime.h  equip_menu_scene.cpp  font.cpp  font.h  item_use_scene.cpp  key.cpp  main.cpp  main_menu_scene.cpp  map_scene.cpp  objects_menu_scene.cpp  player.cpp  save_load_menu_scene.cpp  scene.cpp  sprite.h  timer.cpp  timer.h  tools.cpp  tools.h
branches/oldtools/ldbreader/: ldb.h  ldbchunks.h  tools.cpp  tools.h
branches/oldtools/lmtreader/: lmt.cpp  lmt.h  main.cpp  tools.h
branches/oldtools/lmureader/: map.h  tools.cpp  tools.h
editor/: AUTHORS  Makefile.am
editor/docs/: rpg2003.hlp
editor/win32/: easyrpg.dev
editor/wxglade/: easyrpg.wxg
editor/wxglade/toolbar/: Thumbs.db
src/: DialogDb.cpp  DialogDb.h  DialogDbLearnSkill.cpp  DialogDbLearnSkill.h  DialogDbMaxNumber.cpp  DialogDbMaxNumber.h  DialogDbSelectAnyGraphic.cpp  DialogDbSelectAnyGraphic.h  DialogEvt.cpp  DialogEvt.h  DialogEvtCmd.cpp  DialogEvtCmd.h  DialogEvtCmdActorFaceGraphic.cpp  DialogEvtCmdActorFaceGraphic.h  DialogEvtCmdActorGraphic.cpp  DialogEvtCmdActorGraphic.h  DialogEvtCmdActorName.cpp  DialogEvtCmdActorName.h  DialogEvtCmdActorNameInput.cpp  DialogEvtCmdActorNameInput.h  DialogEvtCmdActorTitle.cpp  DialogEvtCmdActorTitle.h  DialogEvtCmdActorTransparency.cpp  DialogEvtCmdActorTransparency.h  DialogEvtCmdAnimation.cpp  DialogEvtCmdAnimation.h  DialogEvtCmdBattle.cpp  DialogEvtCmdBattle.h  DialogEvtCmdBlankScreen.cpp  DialogEvtCmdBlankScreen.h  DialogEvtCmdCallEvent.cpp  DialogEvtCmdCallEvent.h  DialogEvtCmdChangeEscapePlace.cpp  DialogEvtCmdChangeEscapePlace.h  DialogEvtCmdChangeLevel.cpp  DialogEvtCmdChangeLevel.h  DialogEvtCmdChangeVehiclePosition.cpp  DialogEvtCmdChangeVehiclePosition.h  DialogEvtCmdChoice.cpp  DialogEvtCmdChoice.h  (+136 more)
tools/ldbreader/: build.sh  ldb.cpp  ldbstr.cpp  stevent.h  tools.cpp
tools/ldbreader/src/: LDB.cpp  LDB.h  ldbstr.cpp  ldbstr.h  main.cpp
tools/lmtreader/: lmt.cpp  lmt.h  tools.h
tools/lmtreader/src/: LMT.cpp  lmt.cpp  main.cpp  tools.cpp  tools.h
tools/lmtviewer/: lmtviewer.cbp  main.cpp  main.h  mainwindow.cpp  mainwindow.h  tools.cpp
tools/lmu2bmp/: bitmap.cpp  main.cpp  map.h  tools.cpp
tools/lmureader/: main.cpp  map.cpp
trunk/editor/: configure.ac
trunk/editor/docs/: analisis.es.txt
trunk/editor/src/: easyrpg.cpp
trunk/editor/wxglade/: easyrpg.wxg
trunk/tools/ldbreader/: ldb.cpp  main.cpp  stevent.cpp
trunk/tools/ldbreader/src/: LDBChunks.h
trunk/tools/lmtreader/: build.sh  lmt.h  main.cpp  tools.cpp  tools.h
trunk/tools/lmtreader/src/: LMT.cpp  LMT.h  main.cpp  tools.cpp  tools.h
trunk/tools/lmtviewer/: LMT.cpp  LMT.h  lmtviewer.cbp  main.cpp  main.h  mainwindow.cpp  mainwindow.h  tools.h
trunk/tools/lmu2bmp/: AUTHORS  Makefile  bitmap.h  chipset.cpp  chipset.h  map.cpp  tools.h
trunk/tools/lmureader/: main.cpp  map.cpp  map.h  stevent.cpp
win32/: EasyRPG.dev  EasyRPG.exe.Manifest  EasyRPG.layout  EasyRPG_private.rc  easyrpg.dev  easyrpg.layout  easyrpg.rc  easyrpg_private.h  easyrpg_private.rc
wxglade/: easyrpg.wxg
(+10 files in other folders)
