EXTRA_DIST = win32/ src/easyrpg.xpm

bin_PROGRAMS = easyrpg-editor-wx

easyrpg_editor_wx_SOURCES = \
	src/DialogDb.cpp \
	src/DialogDb.h \
	src/DialogDbLearnSkill.cpp \
	src/DialogDbLearnSkill.h \
	src/DialogDbMaxNumber.cpp \
	src/DialogDbMaxNumber.h \
	src/DialogDbSelectAnyGraphic.cpp \
	src/DialogDbSelectAnyGraphic.h \
	src/DialogEvtCmdActorFaceGraphic.cpp \
	src/DialogEvtCmdActorFaceGraphic.h \
	src/DialogEvtCmdActorGraphic.cpp \
	src/DialogEvtCmdActorGraphic.h \
	src/DialogEvtCmdActorName.cpp \
	src/DialogEvtCmdActorName.h \
	src/DialogEvtCmdActorNameInput.cpp \
	src/DialogEvtCmdActorNameInput.h \
	src/DialogEvtCmdActorTitle.cpp \
	src/DialogEvtCmdActorTitle.h \
	src/DialogEvtCmdActorTransparency.cpp \
	src/DialogEvtCmdActorTransparency.h \
	src/DialogEvtCmdAnimation.cpp \
	src/DialogEvtCmdAnimation.h \
	src/DialogEvtCmdBattle.cpp \
	src/DialogEvtCmdBattle.h \
	src/DialogEvtCmdBlankScreen.cpp \
	src/DialogEvtCmdBlankScreen.h \
	src/DialogEvtCmdCallEvent.cpp \
	src/DialogEvtCmdCallEvent.h \
	src/DialogEvtCmdChangeEscapePlace.cpp \
	src/DialogEvtCmdChangeEscapePlace.h \
	src/DialogEvtCmdChangeLevel.cpp \
	src/DialogEvtCmdChangeLevel.h \
	src/DialogEvtCmdChangeVehiclePosition.cpp \
	src/DialogEvtCmdChangeVehiclePosition.h \
	src/DialogEvtCmdChoice.cpp \
	src/DialogEvtCmdChoice.h \
	src/DialogEvtCmdCommerce.cpp \
	src/DialogEvtCmdCommerce.h \
	src/DialogEvtCmdConditions.cpp \
	src/DialogEvtCmdConditions.h \
	src/DialogEvtCmd.cpp \
	src/DialogEvtCmdDamage.cpp \
	src/DialogEvtCmdDamage.h \
	src/DialogEvtCmdDeletePicture.cpp \
	src/DialogEvtCmdDeletePicture.h \
	src/DialogEvtCmdEncounterRate.cpp \
	src/DialogEvtCmdEncounterRate.h \
	src/DialogEvtCmdEquipment.cpp \
	src/DialogEvtCmdEquipment.h \
	src/DialogEvtCmdEscapePermissions.cpp \
	src/DialogEvtCmdEscapePermissions.h \
	src/DialogEvtCmdEventMovement.cpp \
	src/DialogEvtCmdEventMovement.h \
	src/DialogEvtCmdEventPosition.cpp \
	src/DialogEvtCmdEventPosition.h \
	src/DialogEvtCmdExperience.cpp \
	src/DialogEvtCmdExperience.h \
	src/DialogEvtCmdFaceGraphic.cpp \
	src/DialogEvtCmdFaceGraphic.h \
	src/DialogEvtCmdFadeMusic.cpp \
	src/DialogEvtCmdFadeMusic.h \
	src/DialogEvtCmdFlashCharacter.cpp \
	src/DialogEvtCmdFlashCharacter.h \
	src/DialogEvtCmdFlashScreen.cpp \
	src/DialogEvtCmdFlashScreen.h \
	src/DialogEvtCmdGetPositionID.cpp \
	src/DialogEvtCmdGetPositionID.h \
	src/DialogEvtCmdGetTerrainID.cpp \
	src/DialogEvtCmdGetTerrainID.h \
	src/DialogEvtCmdGoToLabel.cpp \
	src/DialogEvtCmdGoToLabel.h \
	src/DialogEvtCmdGoToMemorizedPlace.cpp \
	src/DialogEvtCmdGoToMemorizedPlace.h \
	src/DialogEvtCmd.h \
	src/DialogEvtCmdHP.cpp \
	src/DialogEvtCmdHP.h \
	src/DialogEvtCmdInn.cpp \
	src/DialogEvtCmdInn.h \
	src/DialogEvtCmdItem.cpp \
	src/DialogEvtCmdItem.h \
	src/DialogEvtCmdKeyAssignment.cpp \
	src/DialogEvtCmdKeyAssignment.h \
	src/DialogEvtCmdLabel.cpp \
	src/DialogEvtCmdLabel.h \
	src/DialogEvtCmdMemorizePlace.cpp \
	src/DialogEvtCmdMemorizePlace.h \
	src/DialogEvtCmdMessage.cpp \
	src/DialogEvtCmdMessage.h \
	src/DialogEvtCmdMessageOptions.cpp \
	src/DialogEvtCmdMessageOptions.h \
	src/DialogEvtCmdMoney.cpp \
	src/DialogEvtCmdMoney.h \
	src/DialogEvtCmdMovePicture.cpp \
	src/DialogEvtCmdMovePicture.h \
	src/DialogEvtCmdMoveScreen.cpp \
	src/DialogEvtCmdMoveScreen.h \
	src/DialogEvtCmdMP.cpp \
	src/DialogEvtCmdMP.h \
	src/DialogEvtCmdNotes.cpp \
	src/DialogEvtCmdNotes.h \
	src/DialogEvtCmdNumberInput.cpp \
	src/DialogEvtCmdNumberInput.h \
	src/DialogEvtCmdPanorama.cpp \
	src/DialogEvtCmdPanorama.h \
	src/DialogEvtCmdParameter.cpp \
	src/DialogEvtCmdParameter.h \
	src/DialogEvtCmdParty.cpp \
	src/DialogEvtCmdParty.h \
	src/DialogEvtCmdPicture.cpp \
	src/DialogEvtCmdPicture.h \
	src/DialogEvtCmdPlayMusic.cpp \
	src/DialogEvtCmdPlayMusic.h \
	src/DialogEvtCmdPlaySound.cpp \
	src/DialogEvtCmdPlaySound.h \
	src/DialogEvtCmdPlayVideo.cpp \
	src/DialogEvtCmdPlayVideo.h \
	src/DialogEvtCmdRecover.cpp \
	src/DialogEvtCmdRecover.h \
	src/DialogEvtCmdSavePermissions.cpp \
	src/DialogEvtCmdSavePermissions.h \
	src/DialogEvtCmdShake.cpp \
	src/DialogEvtCmdShake.h \
	src/DialogEvtCmdShowScreen.cpp \
	src/DialogEvtCmdShowScreen.h \
	src/DialogEvtCmdSkill.cpp \
	src/DialogEvtCmdSkill.h \
	src/DialogEvtCmdState.cpp \
	src/DialogEvtCmdState.h \
	src/DialogEvtCmdSwapEvents.cpp \
	src/DialogEvtCmdSwapEvents.h \
	src/DialogEvtCmdSwitch.cpp \
	src/DialogEvtCmdSwitch.h \
	src/DialogEvtCmdSystemGraphic.cpp \
	src/DialogEvtCmdSystemGraphic.h \
	src/DialogEvtCmdSystemMenuPermissions.cpp \
	src/DialogEvtCmdSystemMenuPermissions.h \
	src/DialogEvtCmdSystemMusic.cpp \
	src/DialogEvtCmdSystemMusic.h \
	src/DialogEvtCmdSystemSound.cpp \
	src/DialogEvtCmdSystemSound.h \
	src/DialogEvtCmdTeleport.cpp \
	src/DialogEvtCmdTeleport.h \
	src/DialogEvtCmdTeleportPermissions.cpp \
	src/DialogEvtCmdTeleportPermissions.h \
	src/DialogEvtCmdTeleportPlace.cpp \
	src/DialogEvtCmdTeleportPlace.h \
	src/DialogEvtCmdTile.cpp \
	src/DialogEvtCmdTile.h \
	src/DialogEvtCmdTileset.cpp \
	src/DialogEvtCmdTileset.h \
	src/DialogEvtCmdTimer.cpp \
	src/DialogEvtCmdTimer.h \
	src/DialogEvtCmdTone.cpp \
	src/DialogEvtCmdTone.h \
	src/DialogEvtCmdTransition.cpp \
	src/DialogEvtCmdTransition.h \
	src/DialogEvtCmdVariable.cpp \
	src/DialogEvtCmdVariable.h \
	src/DialogEvtCmdVehicleGraphic.cpp \
	src/DialogEvtCmdVehicleGraphic.h \
	src/DialogEvtCmdWait.cpp \
	src/DialogEvtCmdWait.h \
	src/DialogEvtCmdWeather.cpp \
	src/DialogEvtCmdWeather.h \
	src/DialogEvt.cpp \
	src/DialogEvt.h \
	src/DialogMap.cpp \
	src/DialogMap.h \
	src/DialogMaterial.cpp \
	src/DialogMaterial.h \
	src/FrameEditor.cpp \
	src/FrameEditor.h \
	src/main.cpp
